// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form with one child 1`] = `
.c2 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

<form>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label
    </label>
    <input
      className="c2"
      name="name"
      type="text"
    />
  </div>
</form>
`;

exports[`Form with one invalid child and a submit button 1`] = `
.c5 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  border-style: solid;
  border-width: 0.0625rem;
  background: #64518A;
  border-color: #64518A;
  color: #FFFFFF;
}

.c5:focus {
  box-shadow: 0 0 0 0.15rem rgba(100,81,138,0.25);
}

.c5[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c5[disabled]:hover,
.c5[disabled]:active,
.c5[disabled]:focus {
  background-color: #64518A;
  border-color: #C1C6CC;
}

.c5:hover,
.c5:focus,
.c5.hover {
  background: #473764;
  border-color: #473764;
}

.c5:active,
.c5.active {
  background: #2A1B60;
  border-color: #2A1B60;
}

.c2 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
}

.c4 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  border-color: #CC1F36;
  background-color: #FFF2F4;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c3 {
  color: #B2121F;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

<form
  validationMessages={
    Object {
      "name2": Object {
        "message": "e2",
        "type": "error",
      },
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label1
    </label>
    <input
      className="c2"
      name="name1"
      type="text"
    />
  </div>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label2
    </label>
    <div
      className="c0"
    >
      <div
        className="c3"
      >
        e2
      </div>
      <input
        className="c4"
        name="name2"
        type="text"
      />
    </div>
  </div>
  <button
    className="c5"
  >
    Submit
  </button>
</form>
`;

exports[`Form with two invalid children 1`] = `
.c3 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  border-color: #CC1F36;
  background-color: #FFF2F4;
}

.c5 {
  border: solid 1px #C1C6CC;
  height: 28px;
  padding: 0 0.5rem;
  border-radius: 4px;
  font-size: 0.875rem;
  border-color: #E8E5FF;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-weight: 600;
  color: #262D33;
  margin-right: 0.5rem;
  font-size: 0.875rem;
}

.c2 {
  color: #B2121F;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #B2121F;
}

.c4 {
  color: #B2121F;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #473764;
}

<form
  validationMessages={
    Object {
      "name1": Object {
        "message": "e1",
        "type": "error",
      },
      "name2": Object {
        "message": "e1",
        "type": "warning",
      },
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label1
    </label>
    <div
      className="c0"
    >
      <div
        className="c2"
      >
        e1
      </div>
      <input
        className="c3"
        name="name1"
        type="text"
      />
    </div>
  </div>
  <div
    className="c0"
  >
    <label
      className="c1"
      htmlFor={undefined}
    >
      label2
    </label>
    <div
      className="c0"
    >
      <div
        className="c4"
      >
        e1
      </div>
      <input
        className="c5"
        name="name2"
        type="text"
      />
    </div>
  </div>
</form>
`;
